Task_4_1/ros2_ws/log/build_2024-07-01_17-40-39/pbvs/stderr.log
  File "/home/sjk015/Documents/SKJ015-Intelligent_Control/Task_4_1/ros2_ws/install/pbvs/lib/python3.10/site-packages/pbvs/controller.py", line 50
    else
        ^
SyntaxError: expected ':'

